generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider     = "postgresql"
    url          = env("POSTGRES_PRISMA_URL") // uses connection pooling
    relationMode = "foreignKeys"
    //directUrl         = env("POSTGRES_URL_NON_POOLING") // uses a direct connection
    //shadowDatabaseUrl = env("POSTGRES_URL_NON_POOLING") // used for migrations
}

model Brewery {
    id          String  @id @default(cuid())
    name        String  @unique
    description String?
    beers       Beer[]

    @@map(name: "breweries")
}

model Beer {
    id          String  @id @default(cuid())
    name        String  @unique
    description String?
    type        String
    vol         Decimal
    ibu         Int?
    size        Int
    image_url   String?
    stockAmount Int?
    brewery     Brewery @relation(fields: [breweryName], references: [name])
    breweryName String
    botd        Boolean @default(false)

    @@map(name: "beers")
}

model Distillery {
    id          String   @id @default(cuid())
    name        String   @unique
    description String?
    spirits     Spirit[]

    @@map(name: "distilleries")
}

model Spirit {
    id             String     @id @default(cuid())
    name           String     @unique
    description    String?
    type           String
    vol            Decimal
    size           Int
    image_url      String?
    stockAmount    Int?
    distillery     Distillery @relation(fields: [distilleryName], references: [name])
    distilleryName String

    @@map(name: "spirits")
}

model Announcement {
    id          String @id @default(cuid())
    title       String
    description String

    @@map(name: "announcements")
}

model Admin {
    id   String @id @default(cuid())
    name String @unique
}
